--- a/src/index.html
+++ b/src/index.html
@@ -19,14 +19,17 @@
     <!--------------------NAVBAR----------------------->
     <nav class="navbar navbar-expand-lg navbar-light">
         <div class="container">
-            <div class="row col-sm-12 justify-content-between col-8 mx-auto">
+            <div class="row col-sm-12 justify-content-between align-items-center col-md-8 mx-auto">
                 <a class="navbar-brand" href="#">
                     <img src="/src/assets/Sem título.png" class="d-inline-block align-center" width="200" height="80"
                         alt="..."></a>
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
-                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <div>
+                    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+                    aria-controls="navbarNav" aria-expanded="true" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
+                </div>
+                
                 <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
                     <a class="nav-link" href="#sobreVania">A VÂNIA</a>
                     <a class="nav-link" href="#bolos">BOLOS</a>
@@ -68,20 +71,18 @@
     <div class="container">
         <div class="col-8 my-5 mx-auto ">
             <hr>
-            <div class="row">
-                <div class="social mx-auto justify-content-between my-3">
-                    <a class=" px-5" href="#"><i class="fa fa-instagram"></i> Instagram</a>
-                    <a class=" px-5" href="#"><i class="fa fa-facebook"></i> Facebook</a>
-                    <a class=" px-5" href="#"><i class="fa fa-twitter"></i> Twitter</a>
+                <div class="social row mx-auto justify-content-between my-3">
+                    <a class=" px-3 mx-auto" href="#"><i class="fa fa-instagram"></i> Instagram</a>
+                    <a class=" px-3 mx-auto" href="#"><i class="fa fa-facebook"></i> Facebook</a>
+                    <a class=" px-3 mx-auto" href="#"><i class="fa fa-twitter"></i> Twitter</a>
                 </div>
-            </div>
             <hr>
         </div>
     </div>
 
     <!--------------------SOBRE A VANIA----------------------->
-    <div class="col-sm-12 mx-auto mb-5">
-        <div class="card col-sm-8 col-12 mx-auto" id='sobreVania'>
+    <div class="col-sm-12 mx-auto mb-md-5 mb-0">
+        <div class="card col-md-10 col-12 mx-auto" id='sobreVania'>
             <div class="row">
                 <img class="card-img col-lg-6 col-sm-12 p-0 sobreVania-img" src="assets/pexels-photo-1251179.jpeg"
                     alt="Card image cap">
@@ -92,44 +93,17 @@
                         aliquet
                         aliquam. Nunc varius dui in ex ultrices, at feugiat neque sodales. Vivamus ac condimentum ex,
                         eget
-                        cursus erat. Phasellus vulputate mollis interdum. Donec tincidunt molestie dignissim. Fusce est
-                        lorem,
-                        blandit ut sapien vitae, faucibus rutrum mauris. Nam sed arcu enim. Nulla rutrum justo augue,
-                        sit
-                        amet
-                        ornare urna venenatis nec.</p>
-                    <a href="#carreira" class="btn btn-outline-danger" data-toggle="collapse">Conheça mais...</a>
+                        cursus erat.</p>
+                    <a href="#carreira" class="btn btn-outline-light" data-toggle="collapse">Conheça mais...</a>
                 </div>
             </div>
         </div>
         <div class="collapse" id="carreira">
-            <div class="card col-sm-8 col-12 mx-auto">
+            <div class="card col-md-10 col-12 mx-auto">
                 <div class="row">
                     <div class="card-body col-lg-6 col-sm-12">
                         <h5 class="card-title">CARREIRA</h5>
-                        <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse
-                            rhoncus
-                            turpis at tellus
-                            aliquet
-                            aliquam. Nunc varius dui in ex ultrices, at feugiat neque sodales. Vivamus ac condimentum
-                            ex,
-                            eget
-                            cursus erat. Phasellus vulputate mollis interdum. Donec tincidunt molestie dignissim. Fusce
-                            est
-                            lorem,
-                            blandit ut sapien vitae, faucibus rutrum mauris. Nam sed arcu enim. Nulla rutrum justo
-                            augue,
-                            sit
-                            amet
-                            ornare urna venenatis nec. Donec lobortis suscipit ultricies. Donec et dolor eget diam
-                            tincidunt
-                            tristique et a tortor. Nunc elementum tristique arcu, nec rutrum urna fermentum ac. In
-                            molestie,
-                            nulla
-                            non rhoncus sollicitudin, lacus magna scelerisque neque, sed efficitur libero purus quis
-                            ante.
-                            Lorem
-                            ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                        <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse rhoncus turpis at tellus aliquet aliquam. Nunc varius dui in ex ultrices, at feugiat neque sodales. Vivamus ac condimentum ex, eget cursus erat. Phasellus vulputate mollis interdum. Donec tincidunt molestie dignissim. Fusce est lorem, blandit ut sapien vitae, faucibus rutrum mauris. Nam sed arcu enim. Nulla rutrum justo augue, sit amet ornare urna venenatis nec.</p>
                     </div>
 
                     <img class="card-img col-lg-6 col-sm-12 p-0" src="assets/pexels-photo-1070893.jpeg"
@@ -143,18 +117,18 @@
 
     <!--------------------BOLOS----------------------->
 
-    <div class="container-fluid col-10 mt-5 ">
-        <div class="col-sm-12" id="bolos">
-            <div class="row">
-                <hr class="mr-3">
-                <div class="text-center">
+    <div class="container-fluid col-12 my-md-5 mb-4">
+        <div class="col-sm-12 mt-md-5 mt-3" id="bolos">
+            <div class="row pt-5">
+                <hr>
+                <div class="text-center mx-auto col-12">
                     <h1>BOLOS</h1>
                 </div>
-                <hr class="ml-3">
+                <hr>
             </div>
 
-            <div class="row col-sm-12 mx-auto my-5 justify-content-between border">
-                <div class="card mt-3" style="width: 18rem;">
+            <div class="row col-sm-12 mx-auto px-1 justify-content-between border">
+                <div class="card mt-3 mx-auto" style="width: 18rem;">
                     <img src="/src/assets/pexels-photo-433527.jpeg" class="card-img-top" alt="...">
                     <div class="card-body">
                         <p class="card-text">Some quick example text to build on the card title and make up the bulk
@@ -162,14 +136,14 @@
                             the card's content.</p>
                     </div>
                 </div>
-                <div class="card mt-3" style="width: 18rem;">
+                <div class="card mt-3 mx-auto" style="width: 18rem;">
                     <img src="/src/assets/pexels-photo-1070850.jpeg" class="card-img-top img-fluid" alt="...">
                     <div class="card-body">
                         <p class="card-text">Some quick example text to build on the card title and make up the bulk of
                             the card's content.</p>
                     </div>
                 </div>
-                <div class="card mt-3" style="width: 18rem;">
+                <div class="card mt-3 mx-auto" style="width: 18rem;">
                     <img src="/src/assets/pexels-photo-140831.jpeg" class="card-img-top img-fluid" alt="...">
                     <div class="card-body">
                         <p class="card-text">Some quick example text to build on the card title and make up the bulk
@@ -208,9 +182,9 @@
 
     <div class="w-100 banner text-light">
         <div class="container">
-            <div class="row col-10 mx-auto py-5 align-items-center">
-                <div class="col-7">
-                    <p>Venha esperimentar os melhores doces do Brasil!</p>
+            <div class="row col-md-11 col-sm-12 mx-auto py-5 align-items-center">
+                <div class="col-md-7 col-12">
+                    <h3>Venha esperimentar os melhores doces do Brasil!</h3>
                     <p>Com ofertas exclusivas!</p>
                 </div>
                 <div class="col text-center">
@@ -222,18 +196,18 @@
     </div>
 
     <!--------------------DOCES----------------------->
-    <div class="container-fluid col-10 my-5">
+    <div class="container-fluid col-12 my-md-5 mb-4">
         <div class="col-sm-12" id="doces">
             <div class="row">
-                <hr class="mr-3">
-                <div class="text-center">
+                <hr>
+                <div class="text-center mx-auto col-12">
                     <h1>DOCES</h1>
                 </div>
-                <hr class="ml-3">
+                <hr>
             </div>
 
             <div class="row col-lg-12 mx-auto my-5 justify-content-between border">
-                <div class="card mt-3" style="width: 18rem;">
+                <div class="card mt-3 mx-auto" style="width: 18rem;">
                     <img src="/src/assets/pexels-photo-433527.jpeg" class="card-img-top img-fluid" alt="...">
                     <div class="card-body">
                         <p class="card-text">Some quick example text to build on the card title and make up the bulk
@@ -241,7 +215,7 @@
                             the card's content.</p>
                     </div>
                 </div>
-                <div class="card mt-3" style="width: 18rem;">
+                <div class="card mt-3 mx-auto" style="width: 18rem;">
                     <img src="/src/assets/pexels-photo-1070850.jpeg" class="card-img-top img-fluid" alt="...">
                     <div class="card-body">
                         <p class="card-text">Some quick example text to build on the card title and make up the bulk
@@ -249,7 +223,7 @@
                             the card's content.</p>
                     </div>
                 </div>
-                <div class="card mt-3" style="width: 18rem;">
+                <div class="card mt-3 mx-auto" style="width: 18rem;">
                     <img src="/src/assets/pexels-photo-140831.jpeg" class="card-img-top img-fluid" alt="...">
                     <div class="card-body">
                         <p class="card-text">Some quick example text to build on the card title and make up the bulk
@@ -288,14 +262,14 @@
 
     <!--------------------CONTATO----------------------->
 
-    <div class="my-5 col-12 text-muted" id="contato">
+    <div class="py-5 col-12 bg-light text-muted" id="contato">
         <div class="container">
             <div class="row">
-                <div class="col-6 text-center">
+                <div class="col-md-6 col-sm-12 text-center">
                     <img class="img img-fluid" src="/src/assets/Sem título.png" width="250" height="130">
                     <p>"Delicias que surpreendem você"</p>
                 </div>
-                <div class="col-6 justify-content-start">
+                <div class="col-md-6 col-sm-12 mt-4 m-md-0">
                     <p>CONTATO</p>
                     <p class="mb-1"><i class="fa fa-phone"></i> +55 (031) 9 9999-9999</p>
                     <p class="mb-1"><i class="fa fa-envelope"></i> vaniabolos.contato@gmail.com</p>
@@ -311,7 +285,7 @@
     <!--------------------CONTATO----------------------->
 
     <footer>
-        <div class="footer text-center align-items-end bg-light text-muted" id="footer">
+        <div class="footer text-center align-items-end banner text-light" id="footer">
             <p class="mb-0 py-4"><i class="fa fa-copyright"></i> 2019 VANIA BOLOS - TODOS OS DIREITOS RESERVADOS.
                 DESENVOLVIDO POR: WILLIAN LOMEU</p>
         </div>
