--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,7 @@
     <link href="css/styles.css" rel="stylesheet">
 </head>
 
-<body>
+<body class="mx-auto">
     <!--------------------NAVBAR----------------------->
     <nav class="navbar navbar-expand-lg navbar-light">
         <div class="container">
